Fix vertical alignment of toggle buttons for calendar and colour selectors. This resolved ticket #71 as fixed.
git-svn-id: file:///Users/gauthierm/svnrepo/swat/trunk@11928 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/swat-calendar.css
+++ b/www/styles/swat-calendar.css
@@ -118,7 +118,7 @@ td.swat-calendar-control-flydowns {
 }
 
 .swat-calendar-icon {
-	vertical-align: bottom;
+	vertical-align: middle;
 	margin-left: 2px;
 	border: 0;
 }
@@ -130,4 +130,8 @@ td.swat-calendar-control-flydowns {
 
 .swat-calendar-arrows-off {
 	cursor: none;
+}
+
+.swat-date-entry-span {
+	vertical-align: middle;
 }
